Correct margins and z-index in header

--- a/src/pages/components/Layout/Layout.css
+++ b/src/pages/components/Layout/Layout.css
@@ -18,6 +18,7 @@ header {
   left: 0px;
   width: 100%;
   height: 2rem;
+  z-index: 1;
 }
 
 footer {
